# smolyax

./: .gitignore  CITATION.cff  README.md  ci.yml  compare_idxs_impls.py  github  gitignore  indices.py  points.py  pyproject.toml  pytype.cfg  setup.cfg  smolyak.py  smolyak_jax.py  tensorproduct.py
.github/workflows/: ci.yml  docs.yml
benchmarking/: benchmark.ipynb  benchmark.py  depthmap.py  testfunction.py
docs/: index.html  jax_smolyak.html  search.js  smolyax.html
docs/jax_smolyak/: barycentric.html  indices.html  nodes.html  smolyak.html
docs/smolyax/: barycentric.html  indices.html  interpolation.html  nodes.html  quadrature.html
notebooks/: indices.ipynb  nodes.ipynb  points.ipynb  smolyak_example_1D.ipynb  smolyak_example_2D.ipynb  smolyak_example_high_D.ipynb  smolyak_interpolation_1D.ipynb  smolyak_interpolation_2D.ipynb  smolyak_interpolation_high_D.ipynb  smolyak_jax_memory.ipynb  smolyak_memory.ipynb  smolyak_quadrature.ipynb  smolyak_runtime.ipynb
paper/: paper.bib  paper.md
src/jax_smolyak/: __init__.py  barycentric.py  indices.py  nodes.py  points.py  smolyak.py  smolyak_jax.py  tensorproduct.py
src/jax_smolyak.egg-info/: PKG-INFO  SOURCES.txt
src/jax_smolyak/nodes/: base.py  gausshermite.py  leja.py  template.py
src/jax_smolykax/: tensorproduct.py
src/smolyax/: barycentric.py  interpolation.py  quadrature.py
src/smolyax/nodes/: __init__.py  base.py  gausshermite.py  leja.py
src/your_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: setup.py  test_indices.py  test_points.py  test_smolyak.py
tests/: bkp_test_notebooks.py  indices_dense_reference_impl.py  setup.py  smolyak_test_old.ipynb  smolyak_test_simple.ipynb  test_indices.py  test_indices_runtime.py  test_nodes.py  test_points.py  test_smolyak.py  test_smolyak_jax.py  test_smolyak_runtime.py  test_tensorproduct.py
