[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolyax"
version = "1.0.0"
description = "A JAX package for Smolyak interpolation"
authors = [
    { name = "Josephine Westermann" },
    { name = "Joshua Chen", email = "joshuawchen@icloud.com" }
]
license = { text = "MIT" }
dependencies = [
    "jax",
    "numba",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "pytype",
    "black",
    "flake8",
    "flake8-pyproject",
    "pdoc",
    "mypy"
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.flake8]
max-line-length = 120
extend-ignore = """E203"""

[tool.pytype]
python_version = "3.11"
inputs = ["src/smolyax"]
disable = ["import-error"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = false
