[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolyax"
version = "1.0.0"
description = "A high-performance JAX implementation of the Smolyak interpolation operator"
authors = [
    { name = "Josephine Westermann" },
    { name = "Joshua Chen", email = "joshuawchen@icloud.com" }
]
license = { text = "MIT" }
dependencies = [
    "jax >= 0.6.2",
    "numba >= 0.61.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest >= 8.4.1",
    "pytest-benchmark >= 5.1.0",
    "pytype >= 2024.10.11",
    "black >= 25.1.0",
    "flake8 >= 7.3.0",
    "flake8-pyproject >= 1.2.3",
    "pdoc >= 15.0.4",
    "mypy >= 1.16.1",
    "ipykernel >= 6.29.5",
    "matplotlib >= 3.10.3"
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.flake8]
max-line-length = 120
extend-ignore = """E203"""

[tool.pytype]
python_version = "3.11"
inputs = ["src/smolyax"]
disable = ["import-error"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = false
